--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -31,6 +31,8 @@
             <ul>
                 <li>Promote Fishing: They promote and encourage the sport of fishing, particularly fly fishing, as a way to connect with nature and enjoy the outdoors.</li>
                 <li>Education: Rocky Mountain Anglers often provide educational resources and workshops for anglers of all skill levels. This may include fly tying classes, casting lessons, and seminars on various fishing techniques.</li>
+                <li>Fishing Forecast: We will have a forecast of how the fishing is with our most popular lakes in the Rocky Mountains.</li>
+                <li>Reward for Merch: If you are wearing one of our Rocky Mountain Anglers shirts and you catch a Lake or state record while wearing the shirt we will give you a money reward.</li>
             </ul>
             <p><a href="https://www.mycoloradoparks.com/things-to-do/lakes-inside-rocky-mountain/" target="_blank" rel="noopener">SOURCE</a></p>
             
