--- a/04hand-coding/index.html
+++ b/04hand-coding/index.html
@@ -8,7 +8,9 @@
         <meta name="author" content="Carter Bohin">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="fish.css">
-        
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;700&family=Ubuntu:wght@300;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- Start of the page header -->
